IF (VTK_USE_POLARIS)
  ADD_SUBDIRECTORY(ndicapi)
ENDIF (VTK_USE_POLARIS)
IF (VTK_USE_FLOCK)
  ADD_SUBDIRECTORY(flock)
ENDIF (VTK_USE_FLOCK)
IF (VTK_USE_LOGITECH)
  ADD_SUBDIRECTORY(logitech3d)
ENDIF (VTK_USE_LOGITECH)
IF (VTK_USE_POLHEMUS)
  ADD_SUBDIRECTORY(polhemus)
ENDIF (VTK_USE_POLHEMUS)
IF (VTK_USE_MICRONTRACKER)
  ADD_SUBDIRECTORY(MicronTrackerFiles)
ENDIF (VTK_USE_MICRONTRACKER)

