IF (AIGS_USE_NDI)
  ADD_SUBDIRECTORY(ndicapi)
ENDIF (AIGS_USE_NDI)
IF (AIGS_USE_FLOCK)
  ADD_SUBDIRECTORY(flock)
ENDIF (AIGS_USE_FLOCK)
IF (AIGS_USE_LOGITECH)
  ADD_SUBDIRECTORY(logitech3d)
ENDIF (AIGS_USE_LOGITECH)
IF (AIGS_USE_POLHEMUS)
  ADD_SUBDIRECTORY(polhemus)
ENDIF (AIGS_USE_POLHEMUS)
IF (AIGS_USE_MICRONTRACKER)
  ADD_SUBDIRECTORY(MicronTrackerFiles)
ENDIF (AIGS_USE_MICRONTRACKER)

