PROJECT(VTKFLOCK)
INCLUDE_REGULAR_EXPRESSION("^flock.*$")

INCLUDE_DIRECTORIES(${FLOCK_SOURCE_DIR})
INCLUDE_DIRECTORIES(${FLOCK_BINARY_DIR})

SET(common_SRCS
flock.c)

IF (WIN32)
  IF (NOT BORLAND)
    IF (NOT CYGWIN)
      SET(common_SRCS ${common_SRCS} vtkflock.def)
    ENDIF (NOT CYGWIN)
  ENDIF (NOT BORLAND)
ENDIF (WIN32)

ADD_LIBRARY(vtkflock ${common_SRCS})
TARGET_LINK_LIBRARIES( vtkflock )

INSTALL_TARGETS(/lib/vtk vtkflock)
