PROJECT(VTKLOGITECH3D)
INCLUDE_REGULAR_EXPRESSION("^logitech3d.*$")

INCLUDE_DIRECTORIES(${LOGITECH3D_SOURCE_DIR})
INCLUDE_DIRECTORIES(${LOGITECH3D_BINARY_DIR})

SET(common_SRCS
logitech3d.c)

IF (WIN32)
  IF (NOT BORLAND)
    IF (NOT CYGWIN)
      SET(common_SRCS ${common_SRCS} vtklogitech3d.def)
    ENDIF (NOT CYGWIN)
  ENDIF (NOT BORLAND)
ENDIF (WIN32)

ADD_LIBRARY(vtklogitech3d ${common_SRCS})
TARGET_LINK_LIBRARIES( vtklogitech3d )

INSTALL_TARGETS(/lib/vtk vtklogitech3d)
