PROJECT(VTKPOLHEMUS)
INCLUDE_REGULAR_EXPRESSION("^polhemus.*$")

INCLUDE_DIRECTORIES(${POLHEMUS_SOURCE_DIR})
INCLUDE_DIRECTORIES(${POLHEMUS_BINARY_DIR})

SET(common_SRCS
polhemus.c)

IF (WIN32)
  IF (NOT BORLAND)
    IF (NOT CYGWIN)
      SET(common_SRCS ${common_SRCS} polhemus.def)
    ENDIF (NOT CYGWIN)
  ENDIF (NOT BORLAND)
ENDIF (WIN32)

ADD_LIBRARY(vtkpolhemus ${common_SRCS})
TARGET_LINK_LIBRARIES( vtkpolhemus )

INSTALL_TARGETS(/lib/vtk vtkpolhemus )
